--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="col-lg-6">
                   <ul>
                     <li><i class="bi bi-chevron-right"></i> <strong>Name:</strong> <span>Madania Pangandaman</span></li>
-                    <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                    <li><i class="bi bi-chevron-right"></i> <strong>Nickname:</strong> <span>Dania</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+63 930 3153 517</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span> Baguio City</span></li>
                   </ul>
